// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it accepts property disabled 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: auto;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 20px;
  max-height: 48px;
  border-width: 1px;
  border-style: solid;
  vertical-align: top;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: none;
  cursor: pointer;
  -webkit-transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  pointer-events: all;
  font-weight: 300;
  font-family: "Sailec Regular",sans-serif;
}

.c0:focus {
  outline: none;
}

<button
  class="c0"
  disabled=""
>
  Disabled Button
</button>
`;

exports[`it accepts property fullWidth 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 20px;
  max-height: 48px;
  border-width: 1px;
  border-style: solid;
  vertical-align: top;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: none;
  cursor: pointer;
  -webkit-transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  pointer-events: all;
  font-weight: 300;
  font-family: "Sailec Regular",sans-serif;
}

.c0:focus {
  outline: none;
}

<button
  class="c0"
>
  FullWidth Button
</button>
`;

exports[`it accepts property icon=checkmark 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: auto;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 20px;
  max-height: 48px;
  border-width: 1px;
  border-style: solid;
  vertical-align: top;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: none;
  cursor: pointer;
  -webkit-transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  pointer-events: all;
  font-weight: 300;
  font-family: "Sailec Regular",sans-serif;
}

.c0:focus {
  outline: none;
}

.c1 {
  margin-right: 8px;
  margin-bottom: -2px;
}

<button
  class="c0"
>
  <svg
    class="c1"
    height="16"
    viewBox="0 0 24 24"
    width="16"
  >
    <path
      d="M2.5 12l6.806 7L21.5 5"
      fill="none"
      stroke="#fff"
      stroke-width="2"
    />
  </svg>
  Icon Button
</button>
`;

exports[`it renders black background in dark mode with outline fill set 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: auto;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 20px;
  max-height: 48px;
  border-color: #ffffff;
  border-width: 1px;
  border-style: solid;
  background-color: #000000;
  color: #ffffff;
  fill: #ffffff;
  vertical-align: top;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: none;
  cursor: pointer;
  -webkit-transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  pointer-events: all;
  font-weight: 300;
  font-family: "Sailec Regular",sans-serif;
}

.c0:focus,
.c0:hover {
  color: #cccccc;
  fill: #cccccc;
  background-color: #000000;
  border-color: #cccccc;
}

.c0:active {
  background-color: #000000;
  border-color: #888888;
  fill: #888888;
  color: #888888;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  background-color: #000000;
  border-color: #666666;
  fill: #666666;
  color: #666666;
}

<button
  class="c0"
>
  Color Button
</button>
`;

exports[`it renders default button 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: auto;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 20px;
  max-height: 48px;
  border-width: 1px;
  border-style: solid;
  vertical-align: top;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: none;
  cursor: pointer;
  -webkit-transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  transition: background-color 0.2s ease-in-out,border 0.2s ease-out, color 0.2s ease-out,fill 0.2s ease-out;
  pointer-events: all;
  font-weight: 300;
  font-family: "Sailec Regular",sans-serif;
}

.c0:focus {
  outline: none;
}

<button
  class="c0"
>
  Hello World
</button>
`;
